--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-server": "^2.8.2",
     "apollo-server-express": "^2.8.2",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "graphql": "^14.4.2",
     "mongoose": "^5.6.10"
